update the readme to add the runbook setup